src/objects/CH_Workgroup_Rule__c.object
<CustomObject>
    <fields>
        <fullName>CH_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that the rule applies to</description>
        <inlineHelpText>The customer that the rule applies to. Only one customer can be selected. If you need multiple customers, you need to create a customer group</inlineHelpText>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Legal_Entity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workgroup Rules</relationshipLabel>
        <relationshipName>CH_Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_BusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Contract_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Contract__c</fullName>
        <description>The contract number that the rule applies to</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The contract number that the rule applies to</inlineHelpText>
        <label>DELETE Service Contract</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Country1__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CH_Region1__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>CH_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Country__c</fullName>
        <description>this field will give country of work group.</description>
        <label>Customer Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CH_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates (the)</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Saint Barthélemy</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bolivia (Plurinational State of)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account group that the rule applies to</description>
        <inlineHelpText>The customer group that the rule applies to</inlineHelpText>
        <label>Customer Group</label>
        <referenceTo>CH_CustomerGrouping__c</referenceTo>
        <relationshipLabel>Workgroup Rules</relationshipLabel>
        <relationshipName>CH_Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_LevelOfSupport__c</fullName>
        <label>Level Of Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Level_Of_Support</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Level_Of_Support__c</fullName>
        <description>The level of support that the rule is for</description>
        <inlineHelpText>The level of support that the rule is for</inlineHelpText>
        <label>Level Of Support OLD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Level_Of_Support</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_OrderNumber__c</fullName>
        <description>This field will give order of workgroup.</description>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Outage_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outage No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Outage_Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outage Yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Outage__c</fullName>
        <label>Outage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                    <default>true</default>
                    <label>Any</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_ProductId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProductId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ProductRelease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Release</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.CH_Product__c</field>
                <operation>equals</operation>
                <valueField>CH_ProductRelease__c.CH_ProductId__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>CH_ProductRelease__c.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CH_ProductRelease__c</referenceTo>
        <relationshipLabel>Workgroup Rules</relationshipLabel>
        <relationshipName>Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_ProductVariant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Variant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Complementary Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Additional_Classification__c</field>
                <operation>equals</operation>
                <value>Product Variant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Rules (Product Variant)</relationshipLabel>
        <relationshipName>Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When multiple products need to be assigned to the rule, a product group needs to be created</description>
        <inlineHelpText>When multiple products need to be assigned to the rule, a product group needs to be created</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>CH_ProductGrouping__c</referenceTo>
        <relationshipLabel>Workgroup Rules</relationshipLabel>
        <relationshipName>CH_Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Module</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Product Modules</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Rules (Product Module)</relationshipLabel>
        <relationshipName>Workgroup_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR (3 AND 7) OR 4 OR 5 OR 6 OR 8)</booleanFilter>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Complementary Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Parallel Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Service Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Service Module</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Additional_Classification__c</field>
                <operation>notEqual</operation>
                <value>Product Variant</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Solution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Rules</relationshipLabel>
        <relationshipName>CH_Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Region1__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Region__c</fullName>
        <description>This field will give Reigon of workgroup.</description>
        <label>DELETECustomer Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Europe</fullName>
                </value>
                <value>
                    <fullName>Market Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>Market Asia-Pacific</fullName>
                </value>
                <value>
                    <fullName>Market Greater China</fullName>
                </value>
                <value>
                    <fullName>Market North America</fullName>
                </value>
                <value>
                    <fullName>Market Latin America</fullName>
                </value>
                <value>
                    <fullName>NNO Others</fullName>
                </value>
                <value>
                    <fullName>APEC</fullName>
                    <isActive>false</isActive>
                    <label>APEC</label>
                </value>
                <value>
                    <fullName>Africa</fullName>
                    <isActive>false</isActive>
                    <label>Africa</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <isActive>false</isActive>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>Europe</fullName>
                    <isActive>false</isActive>
                    <label>Europe</label>
                </value>
                <value>
                    <fullName>India</fullName>
                    <isActive>false</isActive>
                    <label>India</label>
                </value>
                <value>
                    <fullName>North America</fullName>
                    <isActive>false</isActive>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>Region Asia-Pacific</fullName>
                    <isActive>false</isActive>
                    <label>Region Asia-Pacific</label>
                </value>
                <value>
                    <fullName>Region Europe</fullName>
                    <isActive>false</isActive>
                    <label>Region Europe</label>
                </value>
                <value>
                    <fullName>Region Greater China</fullName>
                    <isActive>false</isActive>
                    <label>Region Greater China</label>
                </value>
                <value>
                    <fullName>Region Latin America</fullName>
                    <isActive>false</isActive>
                    <label>Region Latin America</label>
                </value>
                <value>
                    <fullName>Region Middle East &amp; Africa</fullName>
                    <isActive>false</isActive>
                    <label>Region Middle East &amp; Africa</label>
                </value>
                <value>
                    <fullName>Region North America</fullName>
                    <isActive>false</isActive>
                    <label>Region North America</label>
                </value>
                <value>
                    <fullName>Region OTHER</fullName>
                    <isActive>false</isActive>
                    <label>Region OTHER</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract number that the rule applies to</description>
        <inlineHelpText>The contract number that the rule applies to</inlineHelpText>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Workgroup Rules</relationshipLabel>
        <relationshipName>Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Internal Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Severity__c</fullName>
        <description>This field will give severity of incident</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Information Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Solution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Rules (Solution)</relationshipLabel>
        <relationshipName>Workgroup_Rules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Support_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Workgroup Rules</relationshipLabel>
        <relationshipName>Workgroup_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_WorkgroupId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WorkgroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup_Type__c</fullName>
        <label>Workgroup Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Workgroup_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <description>Each rule has one workgroup assigned. But a workgroup can be assigned to many rules</description>
        <inlineHelpText>When this rule is selected, the assigned workgroup is used for handling the case</inlineHelpText>
        <label>Workgroup</label>
        <referenceTo>CH_Workgroup__c</referenceTo>
        <relationshipLabel>Workgroup Rules</relationshipLabel>
        <relationshipName>CH_Workgroup_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workgroup Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CH_OrderNumber__c</columns>
        <columns>NAME</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>CH_Level_Of_Support__c</columns>
        <columns>CH_Customer_Group__c</columns>
        <columns>CH_Region1__c</columns>
        <columns>CH_Country1__c</columns>
        <columns>CH_Account__c</columns>
        <columns>CH_Product_Group__c</columns>
        <columns>CH_Product__c</columns>
        <columns>CH_Severity__c</columns>
        <columns>CH_Contract__c</columns>
        <columns>CH_BusinessHours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CH_WG_Rules_for_DV_T</fullName>
        <columns>CH_OrderNumber__c</columns>
        <columns>NAME</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>CH_LevelOfSupport__c</columns>
        <columns>CH_Customer_Group__c</columns>
        <columns>CH_Account__c</columns>
        <columns>CH_Product_Group__c</columns>
        <columns>CH_Product__c</columns>
        <columns>CH_Region1__c</columns>
        <columns>CH_Country1__c</columns>
        <columns>CH_Severity__c</columns>
        <columns>CH_Outage__c</columns>
        <columns>CH_ServiceContract__c</columns>
        <columns>CH_BusinessHours__c</columns>
        <columns>CH_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CH_OrderNumber__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CH WG Rules for DV&amp;T</label>
        <sharedTo>
            <group>CH_DVT_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workgroup Rules</pluralLabel>
    <recordTypes>
        <fullName>CH_CA_WorkgroupRule</fullName>
        <active>true</active>
        <label>CH_CA_WorkgroupRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_KB_WorkgroupRule</fullName>
        <active>true</active>
        <label>CH_KB_WorkgroupRule</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>